--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "faker": "^4.1.0",
     "method-override": "^2.3.10",
     "moment": "^2.20.1",
+    "mongodb": "^4.10.0",
     "mongoose": "^5.0.14",
     "mongoose-url-slugs": "^1.0.2",
     "passport": "^0.4.0",
